Revised 50/50 padding and callout padding in quick fix file

--- a/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
@@ -14,6 +14,13 @@
     display: block;
   }
 
+  .microsite-callout-card {
+    margin-bottom: 1%;
+    margin-top: 1%;
+    padding: 1% 0;
+    text-align: center;
+}
+
   .microsite-text {
     padding: 0 5%;
 
@@ -30,7 +37,6 @@
   }
 
   .microsite-50-50 {
-    margin-bottom: 5%;
 
     .microsite-50-50__text {
       padding: 2% 5%;
