--- a/public/sites/all/themes/gesso_longform/sass/partials/_quick-fixes.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/_quick-fixes.scss
@@ -3,3 +3,14 @@
 //
 // Deadlines happen, so put your quick fixes here. Hopefully there will be time
 // later to move/re-factor these styles into their proper place.
+
+.page-header {
+  background: $red url('../images/default-report-feature-long-form.jpg') repeat repeat;
+  color: $white;
+  display: block;
+  padding: 8em 0 5em 0;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  z-index: -2;
+}
