Update css for longform background image to reference S3 file

--- a/public/sites/all/themes/gesso_longform/sass/partials/_quick-fixes.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/_quick-fixes.scss
@@ -5,7 +5,7 @@
 // later to move/re-factor these styles into their proper place.
 
 .page-header {
-  background: $red url('../images/default-report-feature-long-form.jpg') repeat repeat;
+  background: $red url('http://giexchange-www.s3.amazonaws.com/default-report-feature-long-form.jpg') repeat repeat;
   color: $white;
   display: block;
   padding: 8em 0 5em 0;
