--- a/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_quick-fixes.scss
@@ -49,7 +49,7 @@
 
 .chart {
   .bar {
-    fill: #003359;
+    fill: #40749b;
   }
 
   .axis text {
@@ -65,5 +65,18 @@
 
   .x.axis path {
     display: none;
+  }
+
+  .grid .tick line {
+    stroke: lightgrey;
+    opacity: 0.7;
+    stroke-dasharray: 3,5;
+  }
+  .grid path {
+    stroke-width: 0;
+  }
+  
+  .tick text {
+    font-family: $base-font-family;
   }
 }
