--- a/public/sites/all/themes/gesso/sass/partials/layout/panels/_data.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/panels/_data.scss
@@ -15,6 +15,9 @@
       }
     }
   }
+  .l-highlight {
+    background: #f6f6f6;
+  }
   .l-row1 {}
   &.row2-first {
     &.row2-second {
@@ -113,6 +116,7 @@
   .l-title,
   .l-main,
   .l-main-sidebar,
+  .l-highlight,
   .l-row1,
   .l-row2-first,
   .l-row2-second,
