--- a/public/sites/all/themes/gesso/sass/partials/components/view/_view--simple-data-table.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/view/_view--simple-data-table.scss
@@ -1,15 +1,20 @@
 // custom class to add to views with simple, 2 column layout.  examples on /data
 
 .view--simple-data-table {
-  .view-header {
-
+  .view__header {
+    p {
+      font-size: em($font-size-md);
+      font-weight: bold;
+      line-height: 1.3;
+      margin: 0 0 1em 0;
+    }
   }
   table {
     tr {
       padding-bottom: 0.5em;
     }
     td {
-      font-size: em($font-size-md);
+      //font-size: em($font-size-md);
       line-height: 1.3;
     }
     td:first-child {
