--- a/public/sites/all/themes/gesso/sass/partials/layout/panels/_data.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/panels/_data.scss
@@ -7,6 +7,7 @@
 .l-panels-data {
   @include add-grid(12 at 700px);
   @include add-gutter(2);
+  padding-bottom: 2em;
   &.main {
     &.main-sidebar { // 1, 2 have content
       @include breakpoint(700px) {
@@ -17,10 +18,18 @@
   }
   .l-highlight {
     background: #f6f6f6;
+    margin-bottom: 4em;
+    padding-bottom: 4em;
+    padding-top: 4em;
+    .pane {
+      margin-bottom: 0;
+    }
   }
   .l-row1 {}
   .l-row-divider {
     border-bottom: 1px solid $border-color;
+    margin-bottom: 4em;
+    padding-bottom: 2em;
   }
   &.row2-first {
     &.row2-second {
