--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-text.scss
@@ -1,6 +1,7 @@
 // Styles for the microsites paragraphs text block component
 .microsite-text {
   @extend %microsite-component;
+  padding: 0 5%;
   margin-bottom: 4em;
   margin-top: 4em;
   h2 {
