--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_microsites.scss
@@ -1,5 +1,15 @@
 // Microsites
-$microsite-primary: #00498f;
-$microsite-secondary: #cd1041;
-$microsite-header: #035b94;
-$microsite-site-header: #565a5c;
+
+// palette1
+$microsite-palette1-primary: #00498f;
+$microsite-palette1-secondary: #cd1041;
+$microsite-palette1-header: #035b94;
+$microsite-palette1-site-header: #565a5c;
+$microsite-palette1-main-menu: #00498f;
+
+// palette2
+$microsite-palette2-primary: #cd1041;
+$microsite-palette2-secondary: #faa74a;
+$microsite-palette2-header: #0094b4;
+$microsite-palette2-site-header: #0094b4;
+$microsite-palette2-main-menu: #444545;
