--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-header.scss
@@ -9,7 +9,12 @@ $header-image-height: 700px;
   @extend %microsite-component;
   background-position: 50% 50%;
   background-size: cover;
-  border-bottom: 6px solid $microsite-secondary;
+  .microsite-palette1 & {
+    border-bottom: 6px solid $microsite-palette1-secondary;
+  }
+  .microsite-palette2 & {
+    border-bottom: 6px solid $microsite-palette2-secondary;
+  }
   margin: 0 auto 5em auto;
   min-height: $header-image-height * 0.5;
   @include breakpoint($header-image-width * 0.6) {
@@ -37,7 +42,12 @@ $header-image-height: 700px;
     display: block;
     border-style: solid;
     border-width: 20px 20px 0;
-    border-color: $microsite-secondary transparent transparent;
+    .microsite-palette1 & {
+      border-color: $microsite-palette1-secondary transparent transparent;
+    }
+    .microsite-palette2 & {
+      border-color: $microsite-palette2-secondary transparent transparent;
+    }
     height: 0;
     left: 50%;
     margin-left: -20px;
@@ -95,7 +105,12 @@ $header-image-height: 700px;
   max-width: $max-page-width;
   padding: 5% 2% 2% 2%;
   &:after {
-    border-top: 4px solid $microsite-secondary;
+    .microsite-palette1 & {
+      border-top: 4px solid $microsite-palette1-secondary;
+    }
+    .microsite-palette2 & {
+      border-top: 4px solid $microsite-palette2-secondary;
+    }
     content: "";
     display: block;
     margin: 0.25em auto 0 auto;
