--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--og-menu-single-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--og-menu-single-menu.scss
@@ -1,4 +1,5 @@
 // microsites main menu
+
 .block--og-menu-single-menu {
   float: right;
   margin-top: 1em;
@@ -14,14 +15,23 @@
       padding: 0 0 0 1em;
     }
     .nav__link {
-      color: $microsite-primary;
+      .microsite-palette1 & {
+        color: $microsite-palette1-main-menu;
+        &:hover,
+        &:focus {
+          color: darken($microsite-palette1-main-menu,20%);
+        }
+      }
+      .microsite-palette2 & {
+        color: $microsite-palette2-main-menu;
+        &:hover,
+        &:focus {
+          color: darken($microsite-palette2-main-menu,20%);
+        }
+      }
       font-weight: bold;
       text-decoration: none;
       text-transform: uppercase;
-      &:hover,
-      &:focus {
-        color: darken($microsite-primary,20%);
-      }
     }
   }
 }
