--- a/public/sites/all/themes/gesso/sass/partials/global/extendables/_microsite-component.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/extendables/_microsite-component.scss
@@ -1,21 +1,45 @@
 %microsite-component {
   clear: both;
   a {
-    color: $microsite-primary;
-    &:hover,
-    &:focus {
-      color: darken($microsite-primary,20%);
+    .microsite-palette1 & {
+      color: $microsite-palette1-primary;
+      &:hover,
+      &:focus {
+        color: darken($microsite-palette1-primary,20%);
+      }
+    }
+    .microsite-palette2 & {
+      color: $microsite-palette2-primary;
+      &:hover,
+      &:focus {
+        color: darken($microsite-palette2-primary,20%);
+      }
     }
   }
   h1, h2, h3, h4, h5, h6 {
-    color: $microsite-header;
+    .microsite-palette1 & {
+      color: $microsite-palette1-header;
+    }
+    .microsite-palette2 & {
+      color: $microsite-palette1-header;
+    }
   }
   .button {
-    background-color: $microsite-secondary;
-    border-color: $microsite-secondary;
-    &:hover, &:focus {
-       background-color: darken($microsite-secondary, 6.9%);
-       border-color: darken($microsite-secondary, 6.9%);
+    .microsite-palette1 & {
+      background-color: $microsite-palette1-secondary;
+      border-color: $microsite-palette1-secondary;
+      &:hover, &:focus {
+         background-color: darken($microsite-palette1-secondary, 6.9%);
+        border-color: darken($microsite-palette1-secondary, 6.9%);
+      }
+    }
+    .microsite-palette2 & {
+      background-color: $microsite-palette2-secondary;
+      border-color: $microsite-palette2-secondary;
+      &:hover, &:focus {
+         background-color: darken($microsite-palette2-secondary, 6.9%);
+        border-color: darken($microsite-palette2-secondary, 6.9%);
+      }
     }
   }
   p:last-child {
