--- a/public/sites/all/themes/gesso/sass/partials/_global.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_global.scss
@@ -5,12 +5,15 @@
 // extensions, variables, functions, extendables, and mixins.
 
 // Helper functions and mixins from external libraries.
-@import 'compass';
-@import 'breakpoint'; // github.com/Team-Sass/breakpoint
-@import 'singularitygs'; // github.com/Team-Sass/Singularity
-
+//@import 'compass';
+//@import 'breakpoint'; // github.com/Team-Sass/breakpoint
+//@import 'singularitygs'; // github.com/Team-Sass/Singularity
+@import 'compass-mixins/lib/compass';
+@import 'breakpoint-sass/stylesheets/breakpoint'; // github.com/Team-Sass/breakpoint
+@import 'singularity/stylesheets/singularitygs'; // github.com/Team-Sass/Singularity
 // Custom partials to be shared with all .scss files. Imported with limited
 // sass globbing to ensure load order.
 @import 'global/variables/**/*.*';
 @import 'global/helpers/**/*.*';
 @import 'global/extendables/**/*.*';
+
