additional changes for Libsass. still need to fix breakpoint and images

--- a/public/sites/all/themes/gesso/sass/partials/_global.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_global.scss
@@ -13,7 +13,7 @@
 @import 'singularity/stylesheets/singularitygs'; // github.com/Team-Sass/Singularity
 // Custom partials to be shared with all .scss files. Imported with limited
 // sass globbing to ensure load order.
-@import 'global/variables/**/*.*';
-@import 'global/helpers/**/*.*';
-@import 'global/extendables/**/*.*';
+@import 'glob/variables';
+@import 'glob/helpers';
+@import 'glob/extendables';
 
