--- a/public/sites/all/themes/gesso/sass/partials/_layout.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_layout.scss
@@ -8,4 +8,4 @@
 // Variable to add special styles for Panels admin interface.
 $panels-admin: false;
 
-@import 'layout/**/*.*';
+@import 'glob/layout';
