--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -251,7 +251,7 @@
               @include column-count(3);
               @include column-gap(1em);
               li {
-                @include break-inside(avoid);
+                @include column-break-inside(avoid);
                 display: table; // firefox
                 width: 100%; // firefox
                 break-inside: avoid-column; // ie10
