--- a/public/sites/all/themes/gesso/sass/partials/global/variables/_layout.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/variables/_layout.scss
@@ -2,7 +2,8 @@
 // Layout variables
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 
-$breakpoint-to-ems: true;
+//$breakpoint-to-ems: true;
+@include breakpoint-set('to ems', true);
 $max-page-width: 1120px;
 
 // Mobile Menu
