--- a/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_site-name.scss
@@ -25,7 +25,7 @@
   display: block;
 
   .page-simple & {
-    background: image-url('gix-beta-logo.png');
+    background: url('../images/gix-beta-logo.png');
     background-size: contain;
     background-repeat: no-repeat;
     height: 42px;
