--- a/public/sites/all/themes/gesso/sass/partials/components/_view.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_view.scss
@@ -58,8 +58,8 @@
 
 .view__author-image {
   img {
-    @include border-radius(50%);
     border: 1px solid $border-color;
+    border-radius: 50%;
   }
 }
 
