--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
@@ -75,7 +75,7 @@ $iconList : (
 //Add additional class names and icons to $iconList variable
 @each $iconList, $iconName in $iconList {
   .tb-megamenu-big-button.#{$iconList}:before {
-    @include transition(opacity 0.2s linear);
+    transition: opacity 0.2s linear;
     @include svg-background($iconName);
     opacity: 0.6;
   }
