--- a/public/sites/all/themes/gesso/sass/overrides/admin_menu_toolbar.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/admin_menu_toolbar.scss
@@ -34,11 +34,8 @@
 
   .shortcut-toggle {
     @include image-replace(27px, 27px);
-    @include border-bottom-left-radius(0);
-    @include border-bottom-right-radius(0);
-    @include border-top-left-radius(0.5em);
-    @include border-top-right-radius(0.5em);
     background: #555;
+    border-radius: 0.5em 0.5em 0 0;
     bottom: -0.5em;
     cursor: pointer;
     float: right;
@@ -88,8 +85,8 @@
     }
 
     a {
-      @include border-radius(1em);
       border: 2px solid transparent;
+      border-radius: 1em;
       color: #fff;
       display: block;
       margin: 0;
