--- a/public/sites/all/themes/gesso/sass/overrides/toolbar.scss
+++ b/public/sites/all/themes/gesso/sass/overrides/toolbar.scss
@@ -23,8 +23,8 @@
 }
 
 #toolbar a {
-  @include border-radius(1em);
   border: 2px solid transparent;
+  border-radius: 1em;
   color: #fff;
   margin: 0;
   outline: 0;
@@ -99,12 +99,9 @@
 
 #toolbar .toggle {
   @include image-replace(25px, 25px);
-  @include border-bottom-left-radius(0);
-  @include border-bottom-right-radius(0);
-  @include border-top-left-radius(0.5em);
-  @include border-top-right-radius(0.5em);
   background: #555;
   border: 0;
+  border-radius: 0.5em 0.5em 0 0;
   bottom: 0;
   cursor: pointer;
   padding: 0;
