--- a/public/sites/all/themes/gesso/sass/partials/base/_normalize.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_normalize.scss
@@ -123,7 +123,7 @@ input::-moz-focus-inner {
 
 input[type="checkbox"],
 input[type="radio"] {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
   padding: 0;
 
   @if support-legacy-browser('ie', '7') {
@@ -139,7 +139,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="search"] {
   -webkit-appearance: textfield;
-  @include box-sizing(content-box);
+  box-sizing: content-box;
 }
 
 input[type="search"]::-webkit-search-cancel-button,
@@ -156,7 +156,7 @@ q,
 samp,
 tt,
 var {
-  @include hyphens(none);
+  hyphens: none;
 }
 
 img,
