--- a/public/sites/all/themes/gesso/sass/partials/components/_skiplinks.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_skiplinks.scss
@@ -12,8 +12,8 @@
 .skiplinks__link,
 .skiplinks__link:visited,
 .skiplinks__link:focus {
-  @include border-bottom-left-radius();
-  @include border-bottom-right-radius();
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   background-color: #333;
   border: 2px solid #eee;
   border-top: 0;
