--- a/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_user-register-form.scss
@@ -1,6 +1,6 @@
 #user-register-form {
   // border: 2px solid #cecfcb;
-  // @include box-shadow(0 2px 4px 2px rgba(0, 0, 0, 0.15));
+  // box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15);
   max-width: 750px;
   margin: 1em auto 2em auto;
   overflow: hidden;
@@ -18,11 +18,11 @@
 
   #edit-lr-social-login-links {
     &:after {
-      @include hyphens(none);
       // border-bottom: 1px solid #cecfcb;
       content: "Or sign up with your Email Address";
       display: block;
       font-size: em(18px, 16px);
+      hyphens: none;
       line-height: 1.1;
       margin-top: em(33px, 16px);
       padding: 0;
