--- a/public/sites/all/themes/gesso/sass/partials/components/_views-widget.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_views-widget.scss
@@ -19,7 +19,7 @@ $bp-inline-widgets: 300px, 'no-query' true;
 }
 
 .views-widget__label {
-  @include adjust-font-size-to($font-size-md);
+  font-size: em($font-size-md);
   display: block;
   font-family: $header-font-family;
 }
