--- a/public/sites/all/themes/gesso/sass/partials/components/block/_block--search.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/block/_block--search.scss
@@ -53,7 +53,7 @@
       top: 0;
     }
     width: 60px;
-    @include transition(width 0.2s linear);
+    transition: width 0.2s linear;
     &.is-open {
       width: 435px;
     }
