--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--tb-megamenu-main-menu.scss
@@ -136,7 +136,7 @@
         .tb-megamenu-submenu {
           border: 0;
           border-top: 8px solid $orange;
-          @include box-shadow(0 2px 2px rgba(0,0,0,0.2));
+          box-shadow: 0 2px 2px rgba(0,0,0,0.2);
           min-width: 300px;
           padding: 2em 3em;
           .lt-ie9 & {
@@ -174,7 +174,7 @@
           }
 
           .view {
-            @include hyphens(none);
+            hyphens: none;
             .view__header {
               a {
                 @extend %h2;
@@ -248,13 +248,13 @@
           .span12,
           .span {
             .view .item-list ul {
-              @include column-count(3);
-              @include column-gap(1em);
+              column-count: 3;
+              column-gap: 1em;
               li {
-                @include column-break-inside(avoid);
+                break-inside: avoid-column; // ie10
+                column-break-inside: avoid;
                 display: table; // firefox
                 width: 100%; // firefox
-                break-inside: avoid-column; // ie10
               }
             }
           }
