--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -71,7 +71,7 @@
     background-repeat: no-repeat;
     background-size: 19px 12px;
     border: 0;
-    @include box-shadow(none);
+    box-shadow: none;
     display: inline-block;
     position: absolute;
     right: 0;
@@ -105,9 +105,9 @@
     .nav__item {}
 
     .nav__link {
-      @include hyphens(none);
       break-word: normal;
       color: $mobile-submenu-text-color;
+      hyphens: none;
       padding-left: 2em;
       &:focus,
       &:hover,
