--- a/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/pane/_pane--facetapi.scss
@@ -4,7 +4,7 @@ div[class*="pane--facetapi-"] {
   border-top: 0;
   margin: 0;
   &:last-child {
-    @include box-shadow(0px 4px 2px -2px rgba(0,0,0,0.2));
+    box-shadow: 0px 4px 2px -2px rgba(0,0,0,0.2);
     margin-bottom: 2em;
   }
   .pane__title {
@@ -72,9 +72,9 @@ div[class*="pane--facetapi-"] {
           position: relative;
         }
         a {
-          @include hyphens(none);
           color: $primary-text-color;
           font-weight: normal;
+          hyphens: none;
           overflow: hidden;
         }
       }
