--- a/public/sites/all/themes/gesso/sass/partials/components/view/_view--homepage-cardflip.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/view/_view--homepage-cardflip.scss
@@ -3,8 +3,8 @@
   margin: 0 -0.5em;
   .views-row {
     padding: 0 0.5em 1em 0.5em;
-    @include perspective(800px);
-    @include transform(translate3d(0px, 0px, 0px));
+    perspective: 800px;
+    transform: translate3d(0px, 0px, 0px);
     @include breakpoint(500px, $no-query: true) {
       float: left;
       width: percentage(1/2);
