--- a/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/global/extendables/_button.scss
@@ -2,13 +2,13 @@
 // Button helpers
 
 @mixin button($bg-color: $button-bg-color, $text-color: $button-text-color, $font-size: $font-size-md, $font-family: $button-font-family) {
-  @include adjust-font-size-to($font-size);
-  @include border-radius(0);
   background-color: $bg-color;
   border: 1px solid $bg-color;
+  border-radius: 0;
   color: $button-text-color !important;
   cursor: pointer;
   display: inline-block;
+  font-size: $font-size;
   font-family: $base-font-family;
   font-weight: normal;
   margin: 0 0 rhythm(1);
