--- a/public/sites/all/themes/gesso/sass/partials/layout/_layout-constrain.scss
+++ b/public/sites/all/themes/gesso/sass/partials/layout/_layout-constrain.scss
@@ -8,7 +8,7 @@
   padding-left: 10px;
   padding-right: 10px;
 
-  @if $breakpoint-no-queries {
+  @if breakpoint-get('no queries') == true {
     width: em($max-page-width);
   }
 }
