--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-50-50.scss
@@ -3,7 +3,7 @@
   @extend %clearfix;
   @include breakpoint(900px, $no-query: true) {
     align-items: center;
-    display-flex: flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
   }
