--- a/public/sites/all/themes/gesso/sass/partials/components/_microsite-callout-card.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_microsite-callout-card.scss
@@ -9,7 +9,7 @@
 .microsite-callout-card__inner {
   @include breakpoint(700px) {
     align-items: center;
-    display-flex: flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
   }
