--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_tb-megamenu-big-button.scss
@@ -25,6 +25,7 @@ $iconList : (
   background: $lightblue;
   border: 0;
   font-size: em(15px);
+  margin-bottom: 1em;
   margin-left: $tb-icon-padding;
   min-width: 280px;
   max-width: $tb-max-width;
