--- a/public/sites/all/themes/gesso_longform/sass/overrides/admin_menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/overrides/admin_menu.scss
@@ -39,8 +39,8 @@
     }
 
     > a {
-      @include border-radius(1em);
       border: 2px solid transparent;
+      border-radius: 1em;
       color: #fff;
       display: block;
       margin: 0;
