--- a/public/sites/all/themes/gesso_longform/sass/partials/_module-tweaks.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/_module-tweaks.scss
@@ -6,4 +6,4 @@
 // 'module-tweaks' folder. Sass globbing will automatically import these
 // partials.
 
-@import 'module_tweaks/**/*.*';
+@import 'sass-globbing/module-tweaks';
