--- a/public/sites/all/themes/gesso_longform/sass/partials/base/_normalize.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/base/_normalize.scss
@@ -120,7 +120,7 @@ input::-moz-focus-inner {
 
 input[type="checkbox"],
 input[type="radio"] {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
   padding: 0;
   @if support-legacy-browser('ie', '7') {
     *height: 13px;
@@ -135,7 +135,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="search"] {
   -webkit-appearance: textfield;
-  @include box-sizing(content-box);
+  box-sizing: content-box;
 }
 
 input[type="search"]::-webkit-search-cancel-button,
@@ -152,7 +152,7 @@ q,
 samp,
 tt,
 var {
-  @include hyphens(none);
+  hyphens: none;
 }
 
 img,
