--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_mobile-menu.scss
@@ -17,7 +17,7 @@
 .mobile-menu__bar {
   background-color: $mobile-menu-bg-color;
   border-bottom: 1px solid $mobile-menu-border-color;
-  @include box-shadow(0 0px 2px 1px rgba(0, 0, 0, 0.4));
+  box-shadow: 0 0px 2px 1px rgba(0, 0, 0, 0.4);
   color: $mobile-menu-text-color;
   height: em(40px);
   text-align: center;
@@ -28,10 +28,10 @@
 }
 
 .mobile-menu__button {
-  @include border-radius(0);
-  @include box-shadow(none);
   background-color: $lightred;
   border: 0;
+  border-radius: 0;
+  box-shadow: none;
   color: $mobile-menu-text-color;
   display: inline-block;
   float: right;
@@ -117,6 +117,6 @@
   }
 
   .form-text {
-    @include box-sizing(border-box);
+    box-sizing: border-box;
   }
 }
