--- a/public/sites/all/themes/gesso/sass/partials/_global.scss
+++ b/public/sites/all/themes/gesso/sass/partials/_global.scss
@@ -5,16 +5,13 @@
 // extensions, variables, functions, extendables, and mixins.
 
 // Helper functions and mixins from external libraries.
-//@import 'compass';
-//@import 'breakpoint'; // github.com/Team-Sass/breakpoint
-//@import 'singularitygs'; // github.com/Team-Sass/Singularity
-//@import 'compass-mixins/lib/compass';
-//$experimental-support-for-pie: false;
+
 @import 'breakpoint-sass/stylesheets/breakpoint'; // github.com/Team-Sass/breakpoint
 @import 'singularity/stylesheets/singularitygs'; // github.com/Team-Sass/Singularity
+
 // Custom partials to be shared with all .scss files. Imported with limited
 // sass globbing to ensure load order.
-@import 'glob/variables';
-@import 'glob/helpers';
-@import 'glob/extendables';
+@import 'sass-globbing/variables';
+@import 'sass-globbing/helpers';
+@import 'sass-globbing/extendables';
 
