--- a/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
+++ b/public/sites/all/themes/gesso/sass/partials/base/_html-elements.scss
@@ -57,7 +57,7 @@ audio {}
 b {}
 
 blockquote {
-  margin: 0 1.5em rhythm(1);
+  margin: 0 1.5em $base-spacing;
 }
 
 body {
@@ -92,7 +92,7 @@ colgroup {}
 datalist {}
 
 dd {
-  margin-bottom: rhythm(1);
+  margin-bottom:$base-spacing;
 }
 
 del {}
@@ -104,7 +104,7 @@ dfn {
 }
 
 dl {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
 }
 
 dt {}
@@ -118,7 +118,7 @@ fieldset {}
 figcaption {}
 
 figure {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
 }
 
 footer {}
@@ -142,15 +142,15 @@ h1, %h1 {
   @extend %hN;
   font-size: em($font-size-xxxl);
   font-weight: normal;
-  margin: 0 0 rhythm(1, $font-size-xxxl);
+  margin: 0 0 1em;
 }
 
 h2, %h2 {
-  @extend %hN;
+  @extend %hN; 
   color: $blue;
   font-size: em($font-size-xxl);
   font-weight: normal;
-  margin: 0 0 rhythm(1, $font-size-xxl);
+  margin: 0 0 1em;
 }
 
 h3, %h3 {
@@ -158,25 +158,25 @@ h3, %h3 {
   color: $lightblue;
   font-size: em($font-size-xl);
   font-weight: normal;
-  margin: 0 0 rhythm(1, $font-size-xl);
+  margin: 0 0 1em;
 }
 
 h4, %h4 {
   @extend %hN;
   font-size: em($font-size-lg);
-  margin: 0 0 rhythm(1, $font-size-lg);
+  margin: 0 0 $base-spacing;
 }
 
 h5, %h5 {
   @extend %hN;
   font-size: em($font-size-normal);
-  margin: 0 0 rhythm(1, $font-size-normal);
+  margin: 0 0 $base-spacing;
 }
 
 h6, %h6 {
   @extend %hN;
   font-size: em($font-size-md);
-  margin: 0 0 rhythm(1, $font-size-md);
+  margin: 0 0 $base-spacing;
 }
 
 header {}
@@ -185,7 +185,7 @@ hr {
   box-sizing: content-box;
   border: 1px solid $form-border-color;
   height: 0;
-  margin: rhythm(1) 0;
+  margin: $base-spacing 0;
   padding-bottom: -1px;
 }
 
@@ -193,7 +193,7 @@ html {
   font-family: $base-font-family;
   font-size: 100% * ($base-font-size / 16px);
   hyphens: none;
-  line-height: 1.625em;
+  line-height: $base-spacing;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -202,7 +202,7 @@ i {}
 
 iframe {} 
 
-+img {
+img {
   border: 0;
 
   @if support-legacy-browser('ie', '7') {
@@ -285,7 +285,7 @@ nav {}
 object {}
 
 ol {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
   padding: 0 0 0 1.5em; // LTR
 
   [dir="rtl"] & {
@@ -307,13 +307,13 @@ option {}
 output {}
 
 p {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
 }
 
 param {}
 
 pre {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
   overflow: auto;
 
   @if support-legacy-browser('ie', '6', '7') {
@@ -381,7 +381,7 @@ tr {}
 u {}
 
 ul {
-  margin: 0 0 rhythm(1);
+  margin: 0 0 $base-spacing;
   padding: 0 0 0 1.2em; // LTR
 
   [dir="rtl"] & {
