--- a/public/sites/all/themes/gesso/sass/partials/components/_view.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_view.scss
@@ -4,7 +4,7 @@
 .view {}
 
 .view__filters {
-  margin-bottom: rhythm(1);
+  margin-bottom: $base-spacing;
 }
 
 .view__all {
@@ -78,4 +78,4 @@
 
 
 // Custom view styles imported via sass globbing.
-@import '../glob/view';
+@import '../sass-globbing/view';
