--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_fieldset.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_fieldset.scss
@@ -4,14 +4,14 @@
 .fieldset {
   background: #fff;
   border: 1px solid $form-border-color;
-  margin: rhythm(1) 0 rhythm(1) + em(12px);
+  margin: $base-spacing 0 $base-spacing + em(12px);
   padding: 0 1em;
   position: relative;
   top: em(12px); // Offsets the negative margin of legends.
 }
 
 .fieldset__legend {
-    @include box-sizing(content-box);
+    box-sizing: content-box;
     background: $form-bg-color;
     border: 1px solid $form-border-color;
     border-bottom: none;
@@ -43,7 +43,7 @@
 
 .fieldset__description {
   font-style: italic;
-  margin: rhythm(1) 0;
+  margin: $base-spacing 0;
 }
 
 .fieldset--collapsible {
@@ -58,7 +58,7 @@
     border-bottom-width: 0;
     border-left-width: 0;
     border-right-width: 0;
-    margin-bottom: rhythm(2) + em(12px);
+    margin-bottom: ($base-spacing * 2) + em(12px);
 
     .fieldset__legend {
       border-bottom: 1px solid $form-border-color;
