--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_messages.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_messages.scss
@@ -2,28 +2,28 @@
 // Styles for Drupal messages.
 
 .messages {
-  @include border-radius();
-  @include adjust-font-size-to($font-size-md);
-  background-position: rhythm(0.5, $font-size-md) rhythm(0.5, $font-size-md); // LTR
+  background-position: ($base-spacing / 2) ($base-spacing / 2); // LTR
   background-repeat: no-repeat;
+  border-radius: 5px;
   border-style: solid;
   border-width: 4px 1px;
-  margin: rhythm(1, $font-size-md) 0;
-  padding: rhythm(0.5, $font-size-md) rhythm(0.5, $font-size-md) rhythm(0.5, $font-size-md) rhythm(2, $font-size-md); // LTR
+  font-size: $font-size-md;
+  margin: $base-spacing 0;
+  padding: ($base-spacing / 2) ($base-spacing / 2) ($base-spacing / 2) ($base-spacing * 2); // LTR
   position: relative;
   word-wrap: break-word;
 
   [dir="rtl"] & {
     background-position: 98.5% 50%;
-    padding: rhythm(0.5, $font-size-md) rhythm(2, $font-size-md) rhythm(0.5, $font-size-md) rhythm(0.5, $font-size-md);
+    padding: ($base-spacing / 2) ($base-spacing * 2) ($base-spacing / 2) ($base-spacing / 2);
   }
 
   @media print {
     background-image: none !important;
-    padding-left: rhythm(0.5, $font-size-md); // LTR
+    padding-left: ($base-spacing / 2); // LTR
 
     [dir="rtl"] & {
-      padding-right: rhythm(0.5, $font-size-md);
+      padding-right: ($base-spacing / 2);
     }
   }
 
@@ -36,7 +36,7 @@
   margin: 0;
 
   > li + li {
-    margin-top: rhythm(0.5, $font-size-md);
+    margin-top: ($base-spacing / 2);
   }
 }
 
