--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_vertical-tabs.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_vertical-tabs.scss
@@ -4,7 +4,7 @@
 .vertical-tabs {
   background: $body-color;
   border: 1px solid $form-border-color;
-  margin: rhythm(1) 0;
+  margin: $base-spacing 0;
   position: relative;
 }
 
