--- a/public/sites/all/themes/gesso_longform/sass/partials/components/nav/_nav--mobile-menu.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/nav/_nav--mobile-menu.scss
@@ -62,7 +62,7 @@
     background-repeat: no-repeat;
     background-size: 19px 12px;
     border: 0;
-    @include box-shadow(none);
+    box-shadow: none;
     display: inline-block;
     height: em(44px);
     position: absolute;
