--- a/public/sites/all/themes/gesso_longform/sass/partials/global/helpers/_border-box.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/helpers/_border-box.scss
@@ -2,7 +2,7 @@
 // Box-sizing: border-box
 
 @mixin border-box {
-  @include box-sizing(border-box);
+  box-sizing: border-box;
 
   // Courtesy of Zen Grids. Modified a bit.
   @if support-legacy-browser('ie', '7') {
