--- a/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_typography.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_typography.scss
@@ -5,8 +5,8 @@
 $base-font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $header-font-family: $base-font-family;
 $monospace-font-family: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;
+$base-spacing: 1.625em;
 $base-font-size: 16px;
-$base-line-height: 26px;
 $font-size-key-figure:100px;
 $font-size-header:45px;
 $font-size-xxxl: 36px;
