--- a/public/sites/all/themes/gesso_longform/sass/partials/layout/ds/_slat.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/layout/ds/_slat.scss
@@ -10,7 +10,7 @@ $gutter: 1em;
 
 .layout-slat__media {
   margin: 0;
-  padding: 0 0 rhythm(1);
+  padding: 0 0 $base-spacing;
 
   @include breakpoint($bp-first) {
     float: left;
