--- a/public/sites/all/themes/gesso_longform/sass/styles.scss
+++ b/public/sites/all/themes/gesso_longform/sass/styles.scss
@@ -17,8 +17,9 @@ $browser-minimum-versions: (
   safari: '5'
 );
 
-$breakpoint-no-queries: false;
-$breakpoint-no-query-fallbacks: false;
+@import 'breakpoint-sass/stylesheets/breakpoint'; // github.com/Team-Sass/breakpoint
+@include breakpoint-set('no queries', false);
+@include breakpoint-set('no query fallbacks', false);
 
 @import 'partials/global';
 @import 'partials/base';
